# SLIDE

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  catalog_query.py  example.ipynb  pyproject.toml  run_subtraction.py  setup.py  subtraction.py
lsst_decam_subtraction/: __init__.py  decam_image_subtraction_old.py  image_processing.py  lsst_utils.py  reference_download.py  run_subtraction_old.py  subtraction.py
slide_lsst/: __init__.py  _version.py  image_processing.py  lsst_utils.py  reference_download.py  slide_image_class.py  subtraction.py
