[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "slide_lsst"
dynamic = ["version"]
description = "Image subtraction package for LSST using DECam templates"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yize Dong", email = "yize.dong@outlook.com"}
]
maintainers = [
    {name = "Yize Dong", email = "yize.dong@outlook.com"}
]
keywords = ["astronomy", "lsst", "decam", "image-subtraction", "transient-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "astropy>=5.0.0",
    "photutils>=1.4.0",
    "reproject>=0.8.0",
    "sep>=1.1.0",
    "requests>=2.25.0",
    "pyvo>=1.3.0",
    "astroquery>=0.4.6",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/yizedong/SLIDE"
Documentation = "https://github.com/yizedong/SLIDE#readme"
Repository = "https://github.com/yizedong/SLIDE"
"Bug Tracker" = "https://github.com/yizedong/SLIDE/issues"

[tool.setuptools_scm]
write_to = "slide_lsst/_version.py"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 